[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-health-check2"
dynamic = ["version"]

[tool.black]
target-version = ["py38"]

[tool.hatch.version]
path = "health_check/__about__.py"

[tool.pytest.ini_options]
addopts = "--nomigrations --reuse-db --strict-markers"
DJANGO_SETTINGS_MODULE = "tests.testapp.settings"
norecursedirs = ".git"
python_files = "test_*.py"
xfail_strict = true

[tool.hatch.build.targets.sdist]
packages = ["health_check"]

[tool.hatch.build.targets.wheel]
packages = ["health_check"]
